# compiler_practise

c01/main_func/: CMakeLists.txt  grammar.md
c01/main_func/src/back/: CMakeLists.txt  main.cpp
c01/main_func/src/back/include/: output_visitor.hpp
c01/main_func/src/front/: CMakeLists.txt  parser.l  parser.y
c01/main_func/src/front/include/: ast.hpp
c01/source_mgr/: CMakeLists.txt
c01/source_mgr/src/back/: CMakeLists.txt  main.cpp
c02/calc/: .gitignore  CMakeLists.txt
c02/calc/src/: CMakeLists.txt
c02/calc/src/front/: CMakeLists.txt  driver.cpp  lexer.ll  parser.yy
c02/calc/src/front/include/: driver.hpp
c02/calc/src/main/: CMakeLists.txt  main.cpp
c02/cxx_func/: CMakeLists.txt
c02/cxx_func/src/front/: CMakeLists.txt  driver.cpp  file_manager.cpp  lexer.ll  parser.yy
c02/cxx_func/src/front/include/: ast.hpp  driver.hpp  file_manager.hpp
c02/cxx_func/src/main/: CMakeLists.txt  general_visitor.cpp  main.cpp  output_visitor.cpp
c02/cxx_func/src/main/include/: code_gen.hpp  general_visitor.hpp  output_visitor.hpp
c02/cxx_func/test_file/: main.c
c02/main_func/: CMakeLists.txt  grammar.bnf
c02/main_func/src/front/: CMakeLists.txt  lexer.l  parser.l  parser.y
c02/main_func/src/front/include/: ast.hpp
c02/main_func/src/main/: CMakeLists.txt  main.cpp
c03/main_func/: README.md
c03/main_func/files/: grammar.bnf  main.c
c03/main_func/src/front/: CMakeLists.txt  ast.cpp  base_ast.cpp  driver.cpp  lexer.ll  location_range.cpp  parser.yy
c03/main_func/src/front/ast/: CMakeLists.txt  ast.cpp  base_ast.cpp  base_components_ast.cpp  decl_ast.cpp  expr_ast.cpp  operation_ast.cpp  operator_ast.cpp  stmt_ast.cpp
c03/main_func/src/front/ast/include/: ast.def  ast.hpp  base_ast.hpp  base_components_ast.hpp  decl_ast.hpp  expr_ast.hpp  operation_ast.hpp  operator_ast.hpp  stmt_ast.hpp
c03/main_func/src/front/include/: ast.hpp  base_ast.hpp  driver.hpp  expr_ast.hpp  file_manager.hpp  llvm_location.hpp  location_range.hpp  operation_ast.hpp  utility.hpp
c03/main_func/src/main/: code_gen_visitor.cpp  emit_target.cpp  general_visitor.cpp  main.cpp
c03/main_func/src/main/include/: c_type_manager.hpp  code_gen_visitor.hpp  conversion.hpp  emit_target.hpp  general_visitor.hpp
c03/test_srcmanager/src/main/: main.cpp
c04/main_func/: .gitignore  CMakeLists.txt  README.md
c04/main_func/files/: main.c
c04/main_func/src/front/: CMakeLists.txt  driver.cpp  llvm_location.cpp
c04/main_func/src/front/ast/: stmt_ast.cpp
c04/main_func/src/front/ast/include/: base_ast.hpp  block_ast.hpp  decl_ast.hpp  expr_ast.hpp
c04/main_func/src/front/include/: driver.hpp
c04/main_func/src/main/: code_gen_visitor.cpp  main.cpp
c04/main_func/src/main/include/: code_gen_visitor.hpp  symbol_table.hpp
c04/main_func/src/semantix/: conversion.cpp  type_mgr.cpp
c04/main_func/src/semantix/include/: conversion.hpp  type_mgr.hpp
c04/test_location/: txt.report
c04/test_location/src/: CMakeLists.txt
c04/test_location/src/front/: CMakeLists.txt  driver.cpp  lexer.ll  location_range.cpp  parser.yy
c04/test_location/src/front/include/: ast.hpp  driver.hpp  llvm_location.hpp  location_range.hpp
c04/test_location/src/main/: CMakeLists.txt  c_type_manager.cpp  main.cpp
